src/objects/CPQ_FRUCustItemCdMap__c.object
<CustomObject>
    <description>De-normalized table to capture Item code vs Cust Item Code vs Account and FRU Vs Item code mapping</description>
    <fields>
        <fullName>CPQ_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>FRU Cust Item Cd Maps</relationshipLabel>
        <relationshipName>FRU_Cust_Item_Cd_Maps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CPQ_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True indicates that the mapping is active and being used</description>
        <inlineHelpText>True indicates that the mapping is active and being used</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQ_Asset_Quantity__c</fullName>
        <description>Reference to thr asset quantity for the FRU Item code</description>
        <inlineHelpText>Reference to thr asset quantity for the FRU Item code</inlineHelpText>
        <label>Asset Quantity</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQ_Customer_Item_Code__c</fullName>
        <description>Reference to the customer item code equivalent to product code</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Reference to the customer item code equivalent to product code</inlineHelpText>
        <label>Customer Item Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_FRU_Description__c</fullName>
        <description>Reference to the FRU description of the FRU item code</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Reference to the FRU description of the FRU item code</inlineHelpText>
        <label>FRU Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_FRU_Item_Code__c</fullName>
        <description>Reference to the FRU item code equivalent to product code</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Reference to the FRU item code equivalent to product code</inlineHelpText>
        <label>FRU Item Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Product_Code__c</fullName>
        <description>Reference to the product code for the product</description>
        <formula>CPQ_Product__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Reference to the product code for the product</inlineHelpText>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the product that the customer item code or FRU code maps to</description>
        <inlineHelpText>Reference to the product that the customer item code or FRU code maps to</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>FRU Cust Item Cd Maps</relationshipLabel>
        <relationshipName>FRU_Cust_Item_Cd_Maps</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>FRU Cust Item Cd Map</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>CPQ_Account__c</columns>
        <columns>CPQ_Product__c</columns>
        <columns>CPQ_Product_Code__c</columns>
        <columns>CPQ_Customer_Item_Code__c</columns>
        <columns>CPQ_FRU_Item_Code__c</columns>
        <columns>CPQ_FRU_Description__c</columns>
        <columns>CPQ_Asset_Quantity__c</columns>
        <columns>CPQ_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FCIC-{00000000}</displayFormat>
        <label>FCIC Map ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FRU Cust Item Cd Maps</pluralLabel>
    <recordTypes>
        <fullName>CIC</fullName>
        <active>true</active>
        <description>Customer Item Code</description>
        <label>CIC</label>
    </recordTypes>
    <recordTypes>
        <fullName>FRU</fullName>
        <active>true</active>
        <description>Field Replacable Unit</description>
        <label>FRU</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>